--- a/app/src/main/res/layout/activity_add_new_member.xml
+++ b/app/src/main/res/layout/activity_add_new_member.xml
@@ -323,6 +323,8 @@
                         android:background="@drawable/ic_rectangle_member"
                         app:backgroundTint="#fff"/>
 
+
+
                     <EditText
                         android:id="@+id/companyaddress"
                         android:paddingLeft="25dp"
@@ -355,6 +357,8 @@
 
 
                 </RelativeLayout>
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -456,6 +460,35 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/resellerRate"
+                    android:visibility="gone"
+                    android:background="@drawable/ic_rectangle_memberflid"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+
+                    <EditText
+                        android:id="@+id/etresellerRate"
+                        android:paddingLeft="25dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/sofia_pro_regular_az"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:hint="Rate for Reseller"
+                        android:inputType="text"
+                        android:textColor="@color/black"
+                        android:background="@drawable/ic_rectangle_member"
+                        app:backgroundTint="#fff"/>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/commission"
                     android:visibility="gone"
                     android:background="@drawable/ic_rectangle_memberflid"
@@ -481,6 +514,8 @@
 
 
                 </LinearLayout>
+
+
 
                 <LinearLayout
                     android:id="@+id/btnAddMember"
