--- a/app/src/main/res/layout/activity_success_member_add.xml
+++ b/app/src/main/res/layout/activity_success_member_add.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.profiles.Successaddmember">
+    android:orientation="vertical"
+    tools:context=".SuccessMemberAdd">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,6 +62,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:padding="20dp"
+                    android:id="@+id/TVusername"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sofia_pro_black_az"
                     android:paddingTop="15dp"
@@ -92,6 +96,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:padding="20dp"
+                    android:id="@+id/TVpassword"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/sofia_pro_black_az"
                     android:paddingTop="15dp"
@@ -107,6 +112,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/ok"
                 android:src="@drawable/checkedicon"
                 android:layout_marginTop="60dp"/>
 
@@ -118,6 +124,4 @@
 
     </LinearLayout>
 
-
-
-</FrameLayout>
+</LinearLayout>
