--- a/app/src/main/res/layout/activity_add_schedule.xml
+++ b/app/src/main/res/layout/activity_add_schedule.xml
@@ -33,6 +33,7 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/Back"
                     android:src="@drawable/ic_baseline_arrow_back_ios_24"
                     android:layout_marginTop="24dp"
                     android:layout_marginLeft="15dp"/>
@@ -79,9 +80,9 @@
                 android:gravity="center_horizontal"
                 />
 
-            <ToggleButton
+            <Button
                 android:id="@+id/setting"
-                android:paddingTop="5dp"
+                android:paddingTop="3dp"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:background="#0003DAC5"
@@ -91,6 +92,55 @@
                 android:drawableTop="@drawable/baseline_settings"/>
 
         </LinearLayout>
+
+
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:animateLayoutChanges="true">
+
+            <ImageView
+                android:id="@+id/ivToggleBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_toggle_background"/>
+
+            <ImageView
+                android:id="@+id/ivToggleActive"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_toggle_active"
+                android:layout_gravity="left"/>
+
+            <TextView
+                android:id="@+id/tvCustomer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:text="@string/title_Reseller"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/sofia_pro_regular_az"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:layout_gravity="left|center"/>
+
+            <TextView
+                android:id="@+id/tvCompany"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="30dp"
+                android:text="@string/title_Company"
+                android:padding="15dp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/sofia_pro_regular_az"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:layout_gravity="right|center"/>
+
+        </FrameLayout>
 
         <!--    customer/ company select -->
         <LinearLayout
@@ -555,37 +605,6 @@
 
             </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/llSelectCompany"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@drawable/ic_rect_corner"
-                android:layout_marginTop="8dp"
-                android:paddingLeft="25dp"
-                android:paddingRight="25dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tvCompany"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="10"
-                    android:text="Company"
-                    android:contentDescription="getReseller"
-                    android:textColor="#4DFFFFFF"
-                    android:fontFamily="@font/sofia_pro_regular_az"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_gravity="left|center"/>
-
-                <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_address_card"
-                    android:layout_gravity="right|center"/>
-
-            </LinearLayout>
 
         </LinearLayout>
 
