--- a/app/src/main/res/layout/activity_add_schedule.xml
+++ b/app/src/main/res/layout/activity_add_schedule.xml
@@ -584,7 +584,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvReseller"
+                    android:id="@+id/tvCustomerOrCompany"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="10"
