--- a/app/src/main/res/layout/fragment_get_reseller_profile.xml
+++ b/app/src/main/res/layout/fragment_get_reseller_profile.xml
@@ -6,22 +6,15 @@
     android:id="@+id/content"
     tools:context=".ui.profiles.GetResellerProfile">
 
-    <include
-        layout="@layout/fragment_profiles"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="60dp"
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
 
