--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/content"
+    android:background="@color/black"
     tools:context=".ui.notifications.NotificationsFragment">
 
     <LinearLayout
