--- a/app/src/main/res/layout/fragment_profiles.xml
+++ b/app/src/main/res/layout/fragment_profiles.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:orientation="vertical"
     tools:context=".ui.profiles.ProfilesFragment">
 
@@ -180,6 +181,7 @@
 
     </LinearLayout>
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fcv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="60dp"/>
