--- a/app/src/main/res/layout/fragment_view_member.xml
+++ b/app/src/main/res/layout/fragment_view_member.xml
@@ -5,162 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".ui.profiles.ViewMemberFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center_vertical"
-        android:background="#000000"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="21dp"
-            android:id="@+id/add"
-            android:layout_height="21dp"
-            android:layout_marginLeft="15dp"
-            android:layout_gravity="left|center_vertical"
-            android:src="@drawable/ic_plus"/>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="horizontal"
-            android:gravity="center">
-
-            <LinearLayout
-                android:id="@+id/llsearchBox"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:textColor="@color/white"
-                    android:background="@drawable/tab3_bg"/>
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginLeft="-35dp"
-                    android:layout_gravity="right|center_vertical"
-                    android:src="@drawable/ic_search"/>
-
-            </LinearLayout>
-
-            <FrameLayout
-                android:id="@+id/flTab3"
-                android:visibility="visible"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:animateLayoutChanges="true">
-
-                <ImageView
-                    android:id="@+id/ivToggleBackground"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/tab3_bg"/>
-
-                <ImageView
-                    android:id="@+id/ivToggleActiveP"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/tab3_active"
-                    android:layout_gravity="right|center_vertical"/>
-
-                <TextView
-                    android:id="@+id/tvCustomerP"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/title_Reseller"
-                    android:padding="10dp"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/sofia_pro_regular_az"
-                    android:textSize="13dp"
-                    android:textStyle="bold"
-                    android:layout_gravity="left|center"/>
-
-                <TextView
-                    android:id="@+id/tvCompanyP"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/title_Company"
-                    android:padding="10dp"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/sofia_pro_regular_az"
-                    android:textSize="13dp"
-                    android:textStyle="bold"
-                    android:layout_gravity="center"/>
-
-                <TextView
-                    android:id="@+id/tvMemberP"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/title_Member"
-                    android:padding="10dp"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/sofia_pro_regular_az"
-                    android:textSize="13dp"
-                    android:textStyle="bold"
-                    android:layout_gravity="right|center"/>
-
-            </FrameLayout>
-
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/ivSearchProfiles"
-            android:layout_width="20dp"
-            android:visibility="visible"
-            android:layout_height="20dp"
-            android:layout_marginRight="15dp"
-            android:layout_gravity="right|center_vertical"
-            android:src="@drawable/ic_search"/>
-
-        <ImageView
-            android:id="@+id/ivCancalSearchProfiles"
-            android:visibility="gone"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginRight="15dp"
-            android:layout_gravity="right|center_vertical"
-            android:background="@drawable/ic_icon_metro_cross"
-            android:backgroundTint="#80FFFFFF"/>
-
-        <LinearLayout
-            android:id="@+id/ivFilterProfiles"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp">
-
-            <ImageView
-                android:layout_width="27dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:layout_marginRight="15dp"
-                android:src="@drawable/ic_filter" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_marginTop="60dp"
-        android:paddingBottom="60dp"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
